@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>com.github.teletha</groupId>
 			<artifactId>antibug</artifactId>
-			<version>1.0.0</version>
+			<version>1.0.1</version>
 			<scope>test</scope>
 			<exclusions/>
 		</dependency>
@@ -91,6 +91,7 @@
 					<encoding>UTF-8</encoding>
 					<compilerArgs>
 						<arg>-proc:none</arg>
+						<arg>--enable-preview</arg>
 					</compilerArgs>
 				</configuration>
 				<dependencies>
